# elfprotect

./: .gitignore  CMakeLists.txt  README.md  elf.c  elf.h  elf_file.cc  elf_file.hh  main.cc  packer_protection.cc  packer_protection.hh  protection.hh  sdk.c  sdk.h  virtualization_protection.cc  virtualization_protection.hh
basic_vm/: CMakeLists.txt  compiler.cc  compiler.hh  compiler_app.cc  disassembler.cc  disassembler.hh  disassembler_app.cc  vm_basic.c  vm_basic.h  vm_types.h
basic_vm/unit_tests/: process_instruction_test.cc
dispatcher/: CMakeLists.txt  unpack_dispatcher.asm  unpack_dispatcher.h  vm_entry_dispatcher.asm  vm_entry_dispatcher.h
examples/: CMakeLists.txt  example1.c
libs/: miniz.c
payload/: CMakeLists.txt  encryption.c  encryption.h  payload.c  payload_imports.c  payload_imports.h  syscall_helpers.c  syscall_helpers.h  utils.c  utils.h
